Table User {
  id int [pk]
  email varchar
  password varchar
  role_id int
  is_system_generated boolean
  created_at datetime
  updated_at datetime
}

Table Role {
  id int [pk]
  name varchar
}

Table Token {
  id int [pk]
  user_id int
  token text
  type varchar
  expires_at datetime
  created_at datetime
}

Table PasswordResetToken {
  id int [pk]
  user_id int
  token text
  expires_at datetime
  used boolean
}

Table AccessRequest {
  id int [pk]
  user_id int
  requested_role varchar
  status varchar
  created_at datetime
}

Table City {
  id int [pk]
  name varchar
}

Table School {
  id int [pk]
  name varchar
  city_id int
  manual boolean
  verified boolean
}

Table TeacherProfile {
  id int [pk]
  user_id int
  fio varchar
  school_id int
  city_id int
}

Table StudentProfile {
  id int [pk]
  user_id int
  fio varchar
  school_id int
  city_id int
}

Table ExpertProfile {
  id int [pk]
  user_id int
  fio varchar
  verified boolean
}

Table ManualSchoolEntry {
  id int [pk]
  user_id int
  school_name varchar
  city_id int
  status varchar
  created_at datetime
}

Table Class {
  id int [pk]
  school_id int
  archived boolean
  grade int
  name varchar
  teacher_profile_id int
}

Table ClassStudent {
  id int [pk]
  class_id int
  student_profile_id int
}

Table Section {
  id int [pk]
  subject varchar
  grade_range varchar
  title varchar
}

Table Topic {
  id int [pk]
  section_id int
  title varchar
  description text
  grade_level int
}

Table TaskCard {
  id int [pk]
  topic_id int
  title varchar
  description text
  owner_type varchar  // values: 'expert', 'teacher'
  expert_profile_id int
  teacher_profile_id int
  original_task_card_id int [null]
  status varchar
}

Table Task {
  id int [pk]
  task_card_id int
  prompt text
  answer_key text
  difficulty varchar
  is_ai_generated boolean
}

Table TrainerTaskSet {
  id int [pk]
  user_id int
  topic_id int
  difficulty varchar
  generated_at datetime
  expires_at datetime
  task_ids_json text
}

Table CardSubmissionRequest {
  id int [pk]
  teacher_profile_id int
  task_card_id int
  status varchar
  reviewed_by_admin_id int [null]
  reviewed_at datetime [null]
}

Table Assignment {
  id int [pk]
  task_card_id int
  class_id int
  teacher_profile_id int
  assigned_at datetime
  due_date datetime
}

Table Submission {
  id int [pk]
  assignment_id int
  student_profile_id int
  submitted_at datetime
  result_json text
  attempt_count int
  time_spent int
}

Table DiagnosticTemplate {
  id int [pk]
  grade_level int
  subject varchar
  type varchar  // values: 'initial', 'final'
  created_at datetime
}

Table DiagnosticTemplateTask {
  id int [pk]
  template_id int
  prompt text
  answer_key text
  difficulty varchar
}

Table InitialAssessment {
  id int [pk]
  student_profile_id int
  conducted_at datetime
}

Table FinalAssessment {
  id int [pk]
  student_profile_id int
  conducted_at datetime
}

Table DiagnosticResult {
  id int [pk]
  assessment_id int
  topic_id int
  score int
  details_json text
}

Table LearningProgress {
  id int [pk]
  student_profile_id int
  topic_id int
  progress_percent float
  last_updated datetime
}

Table ActivityLog {
  id int [pk]
  student_profile_id int
  action_type varchar
  entity_type varchar
  assignment_id int
  topic_id int
  submission_id int
  timestamp datetime
}

Table ExperiencePoint {
  id int [pk]
  student_profile_id int
  points int
  reason text
  related_entity_type varchar
  assignment_id int
  topic_id int
  submission_id int
  awarded_at datetime
}

Table Badge {
  id int [pk]
  student_profile_id int
  badge_type varchar
  awarded_at datetime
}

Table MVPTag {
  id int [pk]
  student_profile_id int
  assignment_id int
  timestamp datetime
}

Table Rank {
  id int [pk]
  student_profile_id int
  rank_name varchar
  awarded_at datetime
}

Table TheoryMaterial {
  id int [pk]
  topic_id int
  content text
  "order" int
}

Table Conversation {
  id int [pk]
  type varchar
  related_entity_type varchar
  related_entity_id int
  created_at datetime
}

Table Message {
  id int [pk]
  conversation_id int
  sender_user_id int
  content text
  timestamp datetime
}

Table Feedback {
  id int [pk]
  user_id int
  text text
  email_at_time text
  fio_at_time text
  created_at datetime
}

Table SchoolGroup {
  id int [pk]
  name varchar
  description text
}

Ref: User.role_id > Role.id
Ref: Token.user_id > User.id
Ref: PasswordResetToken.user_id > User.id
Ref: AccessRequest.user_id > User.id
Ref: TeacherProfile.user_id > User.id
Ref: TeacherProfile.city_id > City.id
Ref: TeacherProfile.school_id > School.id
Ref: StudentProfile.user_id > User.id
Ref: StudentProfile.city_id > City.id
Ref: StudentProfile.school_id > School.id
Ref: ExpertProfile.user_id > User.id
Ref: School.city_id > City.id
Ref: ManualSchoolEntry.user_id > User.id
Ref: ManualSchoolEntry.city_id > City.id
Ref: Class.teacher_profile_id > TeacherProfile.id
Ref: Class.school_id > School.id
Ref: ClassStudent.class_id > Class.id
Ref: ClassStudent.student_profile_id > StudentProfile.id
Ref: TaskCard.topic_id > Topic.id
Ref: TaskCard.expert_profile_id > ExpertProfile.id
Ref: TaskCard.teacher_profile_id > TeacherProfile.id
Ref: TaskCard.original_task_card_id > TaskCard.id
Ref: Task.task_card_id > TaskCard.id
Ref: TrainerTaskSet.user_id > User.id
Ref: TrainerTaskSet.topic_id > Topic.id
Ref: CardSubmissionRequest.teacher_profile_id > TeacherProfile.id
Ref: CardSubmissionRequest.task_card_id > TaskCard.id
Ref: CardSubmissionRequest.reviewed_by_admin_id > User.id
Ref: Assignment.task_card_id > TaskCard.id
Ref: Assignment.class_id > Class.id
Ref: Assignment.teacher_profile_id > TeacherProfile.id
Ref: Submission.assignment_id > Assignment.id
Ref: Submission.student_profile_id > StudentProfile.id
Ref: DiagnosticTemplateTask.template_id > DiagnosticTemplate.id
Ref: InitialAssessment.student_profile_id > StudentProfile.id
Ref: FinalAssessment.student_profile_id > StudentProfile.id
Ref: DiagnosticResult.assessment_id > InitialAssessment.id
Ref: DiagnosticResult.topic_id > Topic.id
Ref: LearningProgress.student_profile_id > StudentProfile.id
Ref: LearningProgress.topic_id > Topic.id
Ref: ActivityLog.student_profile_id > StudentProfile.id
Ref: Badge.student_profile_id > StudentProfile.id
Ref: MVPTag.student_profile_id > StudentProfile.id
Ref: MVPTag.assignment_id > Assignment.id
Ref: Rank.student_profile_id > StudentProfile.id
Ref: TheoryMaterial.topic_id > Topic.id
Ref: Message.conversation_id > Conversation.id
Ref: Message.sender_user_id > User.id
Ref: Feedback.user_id > User.id
Ref: ExperiencePoint.student_profile_id > StudentProfile.id
Ref: Topic.section_id > Section.id
